SynProdGITV1/force-app/main/default/objects/Service_Team_Member__c/Service_Team_Member__c.object-meta.xml
<CustomObject>
    <description>Object to store the service team members</description>
    <label>Service Team Member</label>
    <nameField>
        <displayFormat>STM-{000000}</displayFormat>
        <label>Service Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>