SynProdGITV1/force-app/main/default/objects/Service_Team_Member__c/fields/Employee_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Employee_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Team Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Team Members</relationshipLabel>
    <relationshipName>Service_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>