SynProdGITV1/force-app/main/default/objects/Service_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of the service team member.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Manager</fullName>
            </value>
            <value>
                <fullName>Production Manager</fullName>
            </value>
            <value>
                <fullName>Process Improvement Team</fullName>
            </value>
            <value>
                <fullName>Technical Service Manager</fullName>
            </value>
            <value>
                <fullName>Site Quality Manager</fullName>
            </value>
            <value>
                <fullName>Supply Chain Manager</fullName>
            </value>
            <value>
                <fullName>Technology Director</fullName>
            </value>
            <value>
                <fullName>SYN Contract Owner</fullName>
            </value>
            <value>
                <fullName>Supply Chain Primary Operational Contact</fullName>
            </value>
            <value>
                <fullName>Procurement Responsible Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>