SynProdGITV1/force-app/main/default/objects/Service_Team_Member__c/fields/Service_Team__c.field-meta.xml
<CustomField>
    <fullName>Service_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Team</label>
    <referenceTo>Service_Team__c</referenceTo>
    <relationshipLabel>Service Team Members</relationshipLabel>
    <relationshipName>Service_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>