SynProdGITV1/force-app/main/default/objects/Service_Team_Member__c/fields/Service_Team_Member_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Team_Member_External_Id__c</fullName>
    <description>Unique Identifier field for the object</description>
    <externalId>true</externalId>
    <label>Service Team Member External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>