SynProdGITV1/force-app/main/default/objects/Service_Team_Member__c/fields/User_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>User_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>