SynProdGITV1/force-app/main/default/objects/Service_Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Team_Member__c</columns>
    <columns>Service_Team__c</columns>
    <columns>Role__c</columns>
    <columns>User_Team_Member__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>